# Groundwork

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.cpp
shaders/: shader.vert
src/: main.cpp
src/components/: CMakeLists.txt  health.hpp  position.cpp
src/containers/: CMakeLists.txt  componentstorage.cpp  componentstorage.hpp  registry.cpp  registry.hpp  sparseset.cpp
src/game/: CMakeLists.txt  scene.cpp  scene.hpp
src/math/: math.hpp
